--- a/package.json
+++ b/package.json
@@ -19,12 +19,20 @@
     "url": "git://github.com/ajkochanowicz/Kickstrap.git"
   },
   "devDependencies": {
+    "browser-sync": "^1.3.6",
+    "browserify": "^5.11.0",
+    "flexbox-grid": "^1.0.0",
     "gulp": "^3.8.6",
     "gulp-coffee": "^2.1.1",
     "gulp-connect": "^2.0.6",
     "gulp-jade": "^0.6.1",
+    "gulp-notify": "^1.5.0",
     "gulp-ruby-sass": "^0.6.0",
+    "gulp-util": "^3.0.1",
     "gulp-watch": "^0.6.8",
-    "markdown-js": "0.0.3"
+    "markdown-js": "0.0.3",
+    "pretty-hrtime": "^0.2.1",
+    "require-dir": "^0.1.0",
+    "watchify": "^1.0.2"
   }
 }
