--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "browserify": "^5.11.0",
     "flexbox-grid": "^1.0.0",
     "gulp": "^3.8.6",
+    "gulp-changed": "^1.0.0",
     "gulp-coffee": "^2.1.1",
     "gulp-connect": "^2.0.6",
+    "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.6.1",
     "gulp-notify": "^1.5.0",
     "gulp-ruby-sass": "^0.6.0",
