--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
     "type": "git",
     "url": "git://github.com/ajkochanowicz/Kickstrap.git"
   },
+  "browserify": {
+    "transform": [
+      "coffeeify"
+    ]
+  },
   "devDependencies": {
     "browser-sync": "^1.3.6",
     "browserify": "^5.11.0",
+    "browserify-shim": "^3.7.0",
+    "coffeeify": "^0.7.0",
     "flexbox-grid": "^1.0.0",
     "gulp": "^3.8.6",
     "gulp-changed": "^1.0.0",
@@ -35,6 +42,7 @@
     "markdown-js": "0.0.3",
     "pretty-hrtime": "^0.2.1",
     "require-dir": "^0.1.0",
+    "vinyl-source-stream": "^0.1.1",
     "watchify": "^1.0.2"
   }
 }
