--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "type": "git",
     "url": "git://github.com/ajkochanowicz/Kickstrap.git"
   },
+  "browser": {
+  },
   "browserify": {
     "transform": [
-      "coffeeify"
+      "coffeeify",
+      "browserify-shim"
     ]
   },
+  "browserify-shim": {},
   "devDependencies": {
     "browser-sync": "^1.3.6",
     "browserify": "^5.11.0",
