--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "type": "git",
     "url": "git://github.com/ajkochanowicz/Kickstrap.git"
   },
-  "browser": {
-  },
+  "browser": {},
   "browserify": {
     "transform": [
       "coffeeify",
@@ -34,11 +33,11 @@
     "coffeeify": "^0.7.0",
     "flexbox-grid": "^1.0.0",
     "gulp": "^3.8.6",
-    "gulp-changed": "^1.0.0",
     "gulp-coffee": "^2.1.1",
     "gulp-connect": "^2.0.6",
     "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.6.1",
+    "gulp-newer": "^0.3.0",
     "gulp-notify": "^1.5.0",
     "gulp-ruby-sass": "^0.6.0",
     "gulp-util": "^3.0.1",
