adding normalize.sass as a resource
Former-commit-id: a12a1aa9d126db86eceb5e00dfc0ec47c9123364

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-util": "^3.0.1",
     "gulp-watch": "^0.6.8",
     "markdown-js": "0.0.3",
+    "normalize-sass": "^1.0.0",
     "pretty-hrtime": "^0.2.1",
     "require-dir": "^0.1.0",
     "vinyl-source-stream": "^0.1.1",
