Getting system.js implemented but need to read through docs
Former-commit-id: 8e3a2648c9477950d3e745d8b1c6393b537e9427

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "normalize-sass": "^1.0.0",
     "pretty-hrtime": "^0.2.1",
     "require-dir": "^0.1.0",
+    "systemjs": "^0.8.2",
     "vinyl-source-stream": "^0.1.1",
     "watchify": "^1.0.2"
   }
