--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-ruby-sass": "^0.6.0",
     "gulp-util": "^3.0.1",
     "gulp-watch": "^0.6.8",
+    "highlight.js": "^8.2.0",
     "markdown-js": "0.0.3",
     "normalize-sass": "^1.0.0",
     "pretty-hrtime": "^0.2.1",
