--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
       "browserify-shim"
     ]
   },
-  "browserify-shim": {},
+  "browserify-shim": {
+  },
   "devDependencies": {
     "browser-sync": "^1.3.6",
     "browserify": "^5.11.0",
@@ -49,6 +50,7 @@
     "require-dir": "^0.1.0",
     "systemjs": "^0.8.2",
     "vinyl-source-stream": "^0.1.1",
-    "watchify": "^1.0.2"
+    "watchify": "^1.0.2",
+    "when": "^3.4.4"
   }
 }
