--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     ]
   },
   "browserify-shim": {
+    "shit.js": "es6-module-loader"
   },
   "devDependencies": {
     "browser-sync": "^1.3.6",
     "browserify": "^5.11.0",
     "browserify-shim": "^3.7.0",
     "coffeeify": "^0.7.0",
+    "derequire": "^1.0.0",
     "flexbox-grid": "^1.0.0",
     "gulp": "^3.8.6",
     "gulp-coffee": "^2.1.1",
     "gulp-connect": "^2.0.6",
+    "gulp-derequire": "^1.0.0",
     "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.6.1",
     "gulp-newer": "^0.3.0",
