banging head against wall
Former-commit-id: f2010a30fdfad6507f0dc8f817a6dffb8e5151c0

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     ]
   },
   "browserify-shim": {
-    "shit.js": "es6-module-loader"
+    "makePromise": "./node_modules/when/lib/makePromise"
   },
   "devDependencies": {
     "browser-sync": "^1.3.6",
