--- a/package.json
+++ b/package.json
@@ -34,16 +34,21 @@
     "browserify-shim": "^3.7.0",
     "coffeeify": "^0.7.0",
     "derequire": "^1.0.0",
+    "es6-module-loader": "^0.8.2",
     "flexbox-grid": "^1.0.0",
     "gulp": "^3.8.6",
     "gulp-coffee": "^2.1.1",
+    "gulp-concat": "^2.3.5",
     "gulp-connect": "^2.0.6",
     "gulp-derequire": "^1.0.0",
+    "gulp-if": "^1.2.4",
     "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.6.1",
     "gulp-newer": "^0.3.0",
     "gulp-notify": "^1.5.0",
+    "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^0.6.0",
+    "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "gulp-watch": "^0.6.8",
     "highlight.js": "^8.2.0",
