--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "browser-sync": "^1.3.6",
     "browserify": "^5.11.0",
     "browserify-shim": "^3.7.0",
+    "chai": "^1.9.1",
     "coffeeify": "^0.7.0",
     "flexbox-grid": "^1.0.0",
     "gulp": "^3.8.6",
