--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.6.1",
     "gulp-mocha": "^1.0.0",
+    "gulp-mocha-phantomjs": "^0.5.0",
     "gulp-newer": "^0.3.0",
     "gulp-notify": "^1.5.0",
     "gulp-ruby-sass": "^0.6.0",
