--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-watch": "^0.6.8",
     "highlight.js": "^8.2.0",
     "markdown-js": "0.0.3",
+    "mocha": "^1.21.4",
     "normalize-sass": "^1.0.0",
     "pretty-hrtime": "^0.2.1",
     "require-dir": "^0.1.0",
