--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-coffee": "^2.1.1",
     "gulp-connect": "^2.0.6",
     "gulp-derequire": "^1.0.0",
+    "gulp-expect-file": "0.0.7",
     "gulp-if": "^1.2.4",
     "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.6.1",
