--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-newer": "^0.3.0",
     "gulp-notify": "^1.5.0",
     "gulp-ruby-sass": "^0.6.0",
+    "gulp-todos": "^0.1.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "gulp-watch": "^0.6.8",
