--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "coffeeify": "^0.7.0",
     "flexbox-grid": "^1.0.0",
     "gulp": "^3.8.6",
+    "gulp-autoprefixer": "0.0.10",
     "gulp-coffee": "^2.1.1",
     "gulp-connect": "^2.0.6",
     "gulp-derequire": "^1.0.0",
