Adding rails integration
Former-commit-id: f9c7673e1497bc8e65ace3034da047358b9bd151

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@ npm-debug.log
 node_modules
 bower_components
 .sass-cache
+rails/app
+rails/.bundle/
+rails/.yardoc
+rails/Gemfile.lock
+rails/_yardoc/
+rails/coverage/
+rails/doc/
+rails/pkg/
+rails/spec/reports/
+rails/tmp/
+*.bundle
+*.so
+*.o
+*.a
+mkmf.log
