--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "gulp-jade": "^0.6.1",
     "gulp-mocha": "^1.0.0",
     "gulp-mocha-phantomjs": "^0.5.0",
+    "gulp-mustache": "^0.4.0",
     "gulp-newer": "^0.3.0",
     "gulp-notify": "^1.5.0",
+    "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^0.6.0",
     "gulp-todos": "^0.1.0",
     "gulp-uglify": "^1.0.1",
