--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp": "^3.8.6",
     "gulp-autoprefixer": "0.0.10",
     "gulp-coffee": "^2.1.1",
+    "gulp-concat": "^2.4.0",
     "gulp-connect": "^2.0.6",
     "gulp-derequire": "^1.0.0",
     "gulp-expect-file": "0.0.7",
@@ -58,7 +59,7 @@
     "highlight.js": "^8.2.0",
     "markdown-js": "0.0.3",
     "mocha": "^1.21.4",
-    "normalize-sass": "^1.0.0",
+    "normalize.css": "^3.0.1",
     "pretty-hrtime": "^0.2.1",
     "require-dir": "^0.1.0",
     "vinyl-source-stream": "^0.1.1",
