Adding Kickstart details to package.json
Former-commit-id: e855315082bfb62b6d517f961c4cdf8419db99aa

--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "kickstrap",
+  "name": "kickstart-node",
   "version": "3.0.0",
-  "description": "Framework for advanced Bootstrap web development",
+  "description": "A front-end framework for clean HTML and fast performance",
   "keywords": [
-    "Bootstrap",
-    "Stylus",
     "CoffeeScript",
     "Jade",
-    "Angular.js",
-    "JSPM",
-    "Require.js"
+    "CSS",
+    "JS",
+    "Node",
+    "Gulp"
   ],
-  "homepage": "http://getkickstrap.com",
+  "homepage": "http://getkickstart.com",
   "bugs": "https://github.com/ajkochanowicz/Kickstrap/issues",
   "author": "Adam Kochanowicz",
   "repository": {
