--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-if": "^1.2.4",
     "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.6.1",
+    "gulp-minify-css": "^0.3.8",
     "gulp-mocha": "^1.0.0",
     "gulp-mocha-phantomjs": "^0.5.0",
     "gulp-mustache": "^0.4.0",
