Need to include the kickstart compiled files I guess.
Former-commit-id: e533c7d03812f52f17ec490fc13cfee560301d6c

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ rails/tmp/
 *.o
 *.a
 mkmf.log
-kickstart.js
+# kickstart.js # (Apparently the gem needs to see this)
 kickstart.min.js
-kickstart.css
+# kickstart.css # (Apparently the gem needs to see this)
 kickstart.min.css
