Re-adding kickstrap.js for rails
Former-commit-id: 25a22969ae818c1d4ab05926d36ada2b7656e0bb

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ rails/tmp/
 *.a
 mkmf.log
 kickstart.js
+!rails/app/assets/javascripts/kickstart.js # Rails gem needs this.
 kickstart.min.js
 kickstart.css
 kickstart.min.css
