Finally got the stupid thing working
Former-commit-id: be625ff2d6032d0f1b47fdf3421811b228947838

--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ rails/tmp/
 *.a
 mkmf.log
 kickstart.js
-!rails/app/assets/javascripts/kickstart_rails/kickstart.js # Rails gem needs this.
+!rails/app/assets/javascripts/kickstart_rails/kickstart.js
 kickstart.min.js
 kickstart.css
 kickstart.min.css
