Ignoring public rails and adding library one

--- a/.gitignore
+++ b/.gitignore
@@ -6,19 +6,11 @@ raw/publish
 bower_components
 .sass-cache
 *.gem
-rails/.bundle/
-rails/.yardoc
-rails/Gemfile.lock
-rails/_yardoc/
-rails/coverage/
-rails/doc/
-rails/pkg/
-rails/spec/reports/
-rails/tmp/
 *.bundle
 *.so
 *.o
 *.a
+./rails
 mkmf.log
 kickstart.js
 !rails/app/assets/javascripts/kickstart_rails/kickstart.js
