--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "flexbox-grid": "^1.0.0",
     "gulp": "^3.8.6",
     "gulp-autoprefixer": "0.0.10",
-    "gulp-changed": "^1.0.0",
+    "gulp-cached": "^1.0.1",
     "gulp-coffee": "^2.1.1",
     "gulp-concat": "^2.4.0",
     "gulp-connect": "^2.0.6",
