--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-coffee": "^2.1.1",
     "gulp-concat": "^2.4.0",
     "gulp-connect": "^2.0.6",
+    "gulp-css-purge": "^1.0.0",
     "gulp-derequire": "^1.0.0",
     "gulp-expect-file": "0.0.7",
     "gulp-if": "^1.2.4",
